Basic 끗 Scrapy 시작

--- a/1.Basic/Note/02.변수와 자료형.ipynb
+++ b/1.Basic/Note/02.변수와 자료형.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "'Hello World!'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,8 @@
       "I have two apples.\n",
       "I have 2 apples.\n",
       "I have 2 apple.\n",
-      "I have 02 apple.\n"
+      "I have 02 apple.\n",
+      "I have  2 apple.\n"
      ]
     }
    ],
@@ -717,12 +718,14 @@
     "print(\"I have %d apples.\"%number)\n",
     "fruit = \"apple\"\n",
     "print(\"I have %d %s.\"%(number, fruit))\n",
-    "print(\"I have %02d %s.\"%(number, fruit))"
+    "print(\"I have %02d %s.\"%(number, fruit))\n",
+    "print(\"I have %2d %s.\"%(number, fruit))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +805,7 @@
     }
    ],
    "source": [
-    "# 문자열 삽임\n",
+    "# 문자열 삽입\n",
     "str = \",\"\n",
     "str.join(\"abcde\")"
    ]
