--- a/1.Basic/Note/01.PreView.ipynb
+++ b/1.Basic/Note/01.PreView.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
     "# 타입 맘대로 정해줘도 되네\n",
     "\n",
     "def sumF(var01, var02):\n",
-    "    return var01 + var02"
+    "    return var01 + var02\n"
    ]
   },
   {
@@ -334,20 +334,6 @@
    "source": [
     "sumF(10,20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
