--- a/2.Scrapy/Note/04.BeautifulSoup로 스크래핑하기.ipynb
+++ b/2.Scrapy/Note/04.BeautifulSoup로 스크래핑하기.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,19 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (강수) 28일(화) 오전~30일(목) 오전은 흐리고 비가 오겠습니다. \n",
-      " (기온) 이번 예보기간 아침 기온은 21~24도로 오늘(24일, 아침최저기온 19~21도)보다 조금 높겠고, 낮 기온은 25~30도로 오늘(낮최고기온 23~28도)보다 조금 높겠습니다. \n",
-      " (해상) 서해중부해상의 물결은 28일(화)~29일(수) 오전은 1.5~3.5m로 높게 일겠고, 그 밖의 날은 1.0~3.0m로 일겠습니다.\n",
+      " (강수) 30일(목)~7월 1일(금)은 흐리고 비가 내리겠습니다. \n",
+      " (기온) 이번 예보기간 아침 기온은 21~23도로 어제(26일, 아침최저기온 24~25도)보다 낮겠고, 낮 기온은 26~31도로 어제(낮최고기온 27~31도)와 비슷하겠습니다.\n",
+      " (해상) 서해중부해상의 물결은 30일(목) 오전까지 1.0~2.5m로 일겠고, 그 밖의 날은 1.0~2.0m로 일겠습니다.\n",
+      " (주말전망) 7월 2일(토)은 대체로 흐리겠고, 7월 3일(일)은 구름많겠습니다. 아침 기온은 21~23도, 낮 기온은 27~31도가 되겠습니다. \n",
       "\n",
-      "* 이번 예보기간에는 정체전선의 위치에 따라 강수 구역이 변동될 수 있으며, 정체전선의 영향권에서 벗어난 기간에도 대기불안정으로 소나기가 자주 내리는 곳이 있겠으니, \n",
-      "  앞으로 발표되는 예보와 기상정보를 참고하기 바랍니다.\n"
+      "* 7월 1일(금)에는 정체전선의 위치에 따라 강수 구역이 변동될 수 있으며 정체전선의 영향권에서 벗어난 지역에서도 대기 불안정으로 소나기가 내리는 곳이 있겠고,\n",
+      "  7월 2일(토) 이후에는 강수 예보가 없으나 주변 기압계의 세기와 흐름에 따라 강수 예보가 변경될 가능성이 있겠으니, 앞으로 발표되는 예보와 기상정보를 참고하기 바랍니다.\n"
      ]
     }
    ],
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,296.00\n"
+      "1,288.00\n"
      ]
     }
    ],
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,25 +471,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,296.00\n",
-      "959.40\n",
-      "1,365.85\n",
-      "193.72\n",
+      "1,288.00\n",
+      "957.30\n",
+      "1,360.39\n",
+      "192.67\n",
       "135.2000\n",
       "1.0560\n",
       "1.2271\n",
       "103.9500\n",
       "107.62\n",
-      "2130.95\n",
+      "2131.77\n",
       "1827.0\n",
-      "75965.57\n"
+      "75858.24\n"
      ]
     }
    ],
@@ -507,14 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<span class=\"value\">1,296.00</span>, <span class=\"value\">959.40</span>, <span class=\"value\">1,365.85</span>, <span class=\"value\">193.72</span>]\n"
+      "[<span class=\"value\">1,288.00</span>, <span class=\"value\">957.30</span>, <span class=\"value\">1,360.39</span>, <span class=\"value\">192.67</span>]\n"
      ]
     }
    ],
@@ -526,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1,296.00', '959.40', '1,365.85', '193.72']\n"
+      "['1,288.00', '957.30', '1,360.39', '192.67']\n"
      ]
     }
    ],
@@ -547,17 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "미국 :   1,296.00\n",
-      "일본 :     959.40\n",
-      "유럽연합 :   1,365.85\n",
-      "중국 :     193.72\n"
+      "미국 :   1,288.00\n",
+      "일본 :     957.30\n",
+      "유럽연합 :   1,360.39\n",
+      "중국 :     192.67\n"
      ]
     }
    ],
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +583,7 @@
        " <h3 class=\"h_lst\"><span class=\"blind\">중국 CNY</span></h3>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +605,7 @@
        "['미국 USD', '일본 JPY(100엔)', '유럽연합 EUR', '중국 CNY']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,17 +619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "미국 USD :   1,296.00\n",
-      "일본 JPY(100엔) :     959.40\n",
-      "유럽연합 EUR :   1,365.85\n",
-      "중국 CNY :     193.72\n"
+      "미국 USD :   1,288.00\n",
+      "일본 JPY(100엔) :     957.30\n",
+      "유럽연합 EUR :   1,360.39\n",
+      "중국 CNY :     192.67\n"
      ]
     }
    ],
@@ -639,19 +640,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<span class=\"value\">1,296.00</span>, <span class=\"value\">959.40</span>, <span class=\"value\">1,365.85</span>, <span class=\"value\">193.72</span>]\n",
+      "[<span class=\"value\">1,288.00</span>, <span class=\"value\">957.30</span>, <span class=\"value\">1,360.39</span>, <span class=\"value\">192.67</span>]\n",
       "[<span class=\"blind\">미국 USD</span>, <span class=\"blind\">일본 JPY(100엔)</span>, <span class=\"blind\">유럽연합 EUR</span>, <span class=\"blind\">중국 CNY</span>]\n",
-      "미국 \t:   1,296.00\n",
-      "일본 \t:     959.40\n",
-      "유럽연합 \t:   1,365.85\n",
-      "중국 \t:     193.72\n"
+      "미국 \t:   1,288.00\n",
+      "일본 \t:     957.30\n",
+      "유럽연합 \t:   1,360.39\n",
+      "중국 \t:     192.67\n"
      ]
     }
    ],
@@ -674,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -778,114 +779,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "스파이더맨: 노 웨이 홈\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F4fc5880afdb5b7c60161f34184e1f466814fec2d\n",
-      "모가디슈\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F232a8d6e902c63036bbe2ae327d57e82585a639f\n",
-      "이터널스\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Ff2d3ee4afbc78b44e34534037e17f7f382e1b65c\n",
-      "블랙 위도우\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Ff39274b0acd76f7c66f0a5fb9e5b7222ed37b373\n",
-      "분노의 질주: 더 얼티메이트\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Faa6aaf313fb192e6f77f5bd4490d5e127d707240\n",
-      "싱크홀\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F446090579974d44551356ce961743e57eaa41bd6\n",
-      "극장판 귀멸의 칼날: 무한열차편\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fe2733bbc22a93d16bace5658738322df204bbf01\n",
-      "베놈 2: 렛 데어 비 카니지\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F4abb16fd8b2e51e518b7e0165633d4b9602f2495\n",
-      "소울\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F71454256ae63506a7fee5e03cf929b9b65a4f433\n",
-      "크루엘라\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fa0fa0de4d943ad43edcae85122d8ee7e52ef60ea\n",
-      "샹치와 텐 링즈의 전설\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F5a64941e61f5a3fbcad8ef6bbf7edb073b35c01a\n",
-      "인질\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F5c2c57cab283c1111fd1c5f5f0ac05b9be2780c7\n",
-      "듄\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fd0235b8e9c0048e4301f8c9c74da929863e33456\n",
-      "보이스\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fd0643e2cd42252fb6d9018173e867fcd9612c115\n",
-      "007 노 타임 투 다이\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F316e880b27c97eddd0b6f0a42aff0cf1fecd960a\n",
-      "미나리\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fc23137b8c082f66df707f21c9884ca38a1903efa\n",
-      "발신제한\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F667ec351ca416f265896cf5768e94e65177b4da5\n",
-      "보스 베이비 2\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F9ab1a372dd93ced3c357eabb8e01f3f5d6003267\n",
-      "콰이어트 플레이스 2\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F017ba53fae24f8961d3d15c2998d12b10c99cdf1\n",
-      "랑종\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F88c733527983cbd6ab27e4f5f0673358ecfdf9eb\n",
-      "유체이탈자\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F2eee1b07783f3ae40b0446fdcc73851956299a6a\n",
-      "컨저링3: 악마가 시켰다\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F9d7e759a721b7f67ae5d52c2d1d977855ba276aa\n",
-      "기적\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Ff09b6fed698932a9258208f8cc4d041ac95efbbd\n",
-      "고질라 VS. 콩\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Feb7a298ab409fa3aa5969257fb1116c7baf5306d\n",
-      "킹스맨: 퍼스트 에이전트\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F6b8b6ca0acd78221f254f00954744005c99160fb\n",
-      "엔칸토: 마법의 세계\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F28a2bbf1962b4f0a48c72f49957c5e4604ca9ccc\n",
-      "연애 빠진 로맨스\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fa0fcbda650c0e964ac945ebbe38c5ec8d2dc55ff\n",
-      "장르만 로맨스\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F7d54d4dec506b1386961fbac801aaff2287d953d\n",
-      "미션 파서블\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fccd72de0525f9d555fd8b5e07192d51c3f6aef54\n",
-      "더 수어사이드 스쿼드\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F8c183d3a3ac7d926c9aac443a650211a7e5494f4\n",
-      "비와 당신의 이야기\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fcaf611172ce6313c2122695ca43f4a81c137eb76\n",
-      "서복\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F8bf7128761445af9838d9e01effe996f06cd5700\n",
-      "루카\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fa31e64220c3196fc3f664dbd520e4cf64a4a91bd\n",
-      "자산어보\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F31048b63f84f0be67c9aae00c107cf0d4ec375fa\n",
-      "내일의 기억\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F7097614d112f21bbf7ca3b59448a506c6f6632e4\n",
-      "라야와 마지막 드래곤\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F75797aeba183748c728cc35682e7db0a0dc191cf\n",
-      "프리 가이 \n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fb83ce3cb29a492a800a4c18c0c168987ecc21e43\n",
-      "더 스파이\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F1e9fac169c256896fc9c43332cb4a357b3daa863\n",
-      "강릉\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F68abec870c08bd07292a5c057be49158778fe731\n",
-      "정글 크루즈\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Ff489812c2c10a97480b43ce96d2a83626c279282\n",
-      "명탐정 코난: 비색의 탄환\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fbe93442510f0462a3d1ab67aebf3e8c9d6e1d94e\n",
-      "캐시트럭\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fbc4f8b3a720cbab4a8961491cdd7cfd9ca9eaa0c\n",
-      "크루즈 패밀리: 뉴 에이지\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F400267dde749251be83558ea489b0440b1579b07\n",
-      "이스케이프 룸 2: 노 웨이 아웃\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F4ec63ea20869c6a243ebbf2756706a022a11dc7d\n",
-      "극장판 포켓몬스터: 정글의 아이, 코코\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fc607318ce0a60a7d8b8e540ea599f588751df07e\n",
-      "극장판 짱구는 못말려: 격돌! 낙서왕국과 얼추 네 명의 용사들\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F9ab42f8d99b9b6a6bceb169917a3a0c2c222e942\n",
-      "매트릭스: 리저렉션\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2Fe4123c31005612fcdb4acaf7182d4397a9673b3f\n",
-      "방법: 재차의\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F076d1c40be99ec226f0b1a8eec8351034d7072f3\n",
-      "새해전야\n",
-      "https://img1.daumcdn.net/thumb/C408x596/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fmovie%2F2d44e803f67bafec1c7478317cf94db05c450a3c\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#mainContent > div > div.box_boxoffice > ol > li:nth-child(1) > div > div.thumb_item > div.poster_movie > img\n",
     "#mainContent > div > div.box_boxoffice > ol > li:nth-child(2) > div > div.thumb_item > div.poster_movie > img\n",
@@ -903,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,6 +811,79 @@
     "    url = title[i].attrs['src']\n",
     "    saveName = f\"../Data/{title[i].attrs['alt']}.jpeg\"\n",
     "    request.urlretrieve(url, saveName)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 다음 IT News 많이 본 뉴스 제목 크롤링\n",
+    "\n",
+    "- https://media.daum.net/digital/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Library\n",
+    "from bs4 import BeautifulSoup\n",
+    "import urllib.request as req\n",
+    "\n",
+    "# Site Address\n",
+    "url = \"https://media.daum.net/digital/\"\n",
+    "\n",
+    "# urlOpen\n",
+    "res = req.urlopen(url)\n",
+    "\n",
+    "# BeautifulSoup(한테 일시켜) 으로 분석하기\n",
+    "soup = BeautifulSoup(res, \"html.parser\")\n",
+    "#print(soup)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[IT 뉴스 제목 크롤링]\n",
+      " 1 :  \"아이폰14 프로 AOD, 새 잠금화면 위젯 지원\"\n",
+      " 2 :  6월에 출시한 디아블로 이모탈-우마무스메-미르M, 3개 작품의 인기 비결은?\n",
+      " 3 :  화웨이, '100W 터보' 고속 충전 기술 탑재 폰 곧 공개\n",
+      " 4 :  中 손목용 웨어러블 시장서 애플만 '나홀로' 성장\n",
+      " 5 :  비트코인 팔아치우는 채굴자들..\"바닥 가까워졌다는 신호?\"\n",
+      " 6 :  [단독]'각 세종'까지 찾았다..네이버 이해진의 남다른 '자국 데이터' 집념\n",
+      " 7 :  [생활속 과학이야기]  달에 대한 상상과 우주탐사\n",
+      " 8 :  \"죽음 두려워요\"..감정 AI 논쟁에 숨어든 빅테크의 속임수\n",
+      " 9 :  카겜즈, 오딘-우마 '원투펀치' 완성..남궁훈도 인정한 조계현 대표의 '안목'\n",
+      "10 :  폭락장에 상장 나선 쏘카..창업주 이재웅 \"최소 1년간 주식 안판다\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#body > div.container-doc.cont-category > main > section > div.main-sub > div.box_g.box_news_major > ul > li:nth-child(1) > strong\n",
+    "#body > div.container-doc.cont-category > main > section > div.main-sub > div.box_g.box_news_major > ul > li:nth-child(2) > strong > a\n",
+    "title = soup.select(\"li > strong > a\")\n",
+    "# print(title)\n",
+    "\n",
+    "# 뉴스제목 리스트에 넣기\n",
+    "it_title = []\n",
+    "num = 0\n",
+    "for a in title:\n",
+    "    it_title.append(a.text)\n",
+    "\n",
+    "print(\"[IT 뉴스 제목 크롤링]\")\n",
+    "for i in range(len(it_title)):\n",
+    "    num += 1\n",
+    "    print(\"%2d : \"%num,it_title[i])"
    ]
   }
  ],
