--- a/2.Scrapy/Note/12.Web API 사용하기.ipynb
+++ b/2.Scrapy/Note/12.Web API 사용하기.ipynb
@@ -16,8 +16,8 @@
    "source": [
     "import urllib.request\n",
     "\n",
-    "client_id = \"hgfnj4je2i\"\n",
-    "client_secret = \"RN6iUXzpU3q0W9y4pSBtekP7Ae5A9CNsEkn0Cz0E\"\n",
+    "# client_id = \"\"\n",
+    "# client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"서울시 영등포구 국회대로 608\")\n",
     "url = \"https://naveropenapi.apigw.ntruss.com/map-geocode/v2/geocode?query=\" + encText #JSON 형식\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apikey = \"18a6267f2568c028023a6451f0d17649\""
+    "# apikey = \"\""
    ]
   },
   {
