--- a/5.DeepLearning/Note/11.합성곱신경망을 이용한 이미지분류.ipynb
+++ b/5.DeepLearning/Note/11.합성곱신경망을 이용한 이미지분류.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.Sequential()"
+    "model = keras.Sequential() #Sequential이 지금의 최신소스임~"
    ]
   },
   {
@@ -177,31 +177,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n",
-      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.5324 - accuracy: 0.8077 - val_loss: 0.3453 - val_accuracy: 0.8713\n",
+      "Epoch 1/50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-28 10:53:55.809286: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.5150 - accuracy: 0.8163 - val_loss: 0.3225 - val_accuracy: 0.8827\n",
       "Epoch 2/50\n",
-      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.3525 - accuracy: 0.8720 - val_loss: 0.2869 - val_accuracy: 0.8929\n",
+      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.3396 - accuracy: 0.8785 - val_loss: 0.2882 - val_accuracy: 0.8930\n",
       "Epoch 3/50\n",
-      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.3046 - accuracy: 0.8904 - val_loss: 0.2545 - val_accuracy: 0.9033\n",
+      "1500/1500 [==============================] - 13s 8ms/step - loss: 0.2925 - accuracy: 0.8966 - val_loss: 0.2510 - val_accuracy: 0.9064\n",
       "Epoch 4/50\n",
-      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2718 - accuracy: 0.9006 - val_loss: 0.2577 - val_accuracy: 0.9045\n",
+      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2614 - accuracy: 0.9045 - val_loss: 0.2381 - val_accuracy: 0.9112\n",
       "Epoch 5/50\n",
-      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2456 - accuracy: 0.9112 - val_loss: 0.2508 - val_accuracy: 0.9080\n",
+      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2368 - accuracy: 0.9126 - val_loss: 0.2295 - val_accuracy: 0.9157\n",
       "Epoch 6/50\n",
-      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2238 - accuracy: 0.9174 - val_loss: 0.2298 - val_accuracy: 0.9158\n",
+      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2201 - accuracy: 0.9198 - val_loss: 0.2358 - val_accuracy: 0.9151\n",
       "Epoch 7/50\n",
-      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2055 - accuracy: 0.9241 - val_loss: 0.2211 - val_accuracy: 0.9179\n",
+      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.2023 - accuracy: 0.9247 - val_loss: 0.2210 - val_accuracy: 0.9209\n",
       "Epoch 8/50\n",
-      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.1897 - accuracy: 0.9293 - val_loss: 0.2234 - val_accuracy: 0.9204\n",
+      "1500/1500 [==============================] - 13s 9ms/step - loss: 0.1899 - accuracy: 0.9293 - val_loss: 0.2372 - val_accuracy: 0.9145\n",
       "Epoch 9/50\n",
-      "1500/1500 [==============================] - 14s 9ms/step - loss: 0.1757 - accuracy: 0.9342 - val_loss: 0.2254 - val_accuracy: 0.9199\n"
+      "1500/1500 [==============================] - 14s 9ms/step - loss: 0.1742 - accuracy: 0.9342 - val_loss: 0.2286 - val_accuracy: 0.9217\n"
      ]
     }
    ],
